<resources>
    <string name="app_name">Material-UI</string>
    <string name="description">Description</string>
    <string name="elevated_button">Elevated button</string>
    <string name="filled_button">Filled button</string>
    <string name="filled_tonal_button">Filled tonal button</string>
    <string name="outlined_button">Outlined button</string>
    <string name="text_button">Text button</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="dummy_des">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="details">Details</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_forever">Delete forever</string>
    <string name="title_activity_compose">ComposeActivity</string>
    <string name="favorite_collections">Favorite Collections</string>
    <string name="align_your_body">Align your body</string>
    <string name="ab1_inversions">Inversions</string>
    <string name="ab2_quick_yoga">Quick yoga</string>
    <string name="ab3_stretching">Stretching</string>
    <string name="ab4_tabata">Tabata</string>
    <string name="ab5_hiit">HIIT</string>
    <string name="ab6_pre_natal_yoga">Pre-natal yoga</string>
    <string name="fc1_short_mantras">Short mantras</string>
    <string name="fc2_nature_meditations">Nature meditations</string>
    <string name="fc3_stress_and_anxiety">Stress and anxiety</string>
    <string name="fc4_self_massage">Self massage</string>
    <string name="fc5_overwhelmed">Overwhelmed</string>
    <string name="fc6_nightly_wind_down">Nightly wind down</string>
    <string name="cd_fab_start">start</string>
    <string name="bottom_navigation_home">HOME</string>
    <string name="bottom_navigation_profile">PROFILE</string>
    <string name="assist_chip">Assist chip</string>
    <string name="cancel">Cancel</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="news">News</string>
    <string name="music">Music</string>
    <string name="favorite">Favorite</string>
    <string name="notification">Notification</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="other">Other</string>
    <string name="about">About</string>
    <string name="next_song">Next Song</string>
    <string name="previous">Previous</string>
    <string name="loadingMsg">Loading TrackList..</string>
    <string name="artist">\Artist: </string>
    <string name="trackNo">Track No. </string>
    <string name="dismiss">Dismiss</string>
    <string name="play_indicator">Album Play indicator</string>

</resources>