<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>
    <item
        android:id="@+id/news"
        android:enabled="true"
        android:icon="@drawable/ic_news"
        android:title="@string/news"/>
    <item
        android:id="@+id/music"
        android:enabled="true"
        android:icon="@drawable/ic_music"
        android:title="@string/music"/>
    <item
        android:id="@+id/favorite"
        android:enabled="true"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite"/>
    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"/>
</menu>