<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_item"
        android:checkable="true"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notification"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/rotation_item"
        android:checkable="true"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/labels_item"
        android:title="@string/other">
        <menu>
            <item
                android:id="@+id/label_one"
                android:checkable="true"
                android:title="@string/rate_this_app"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/label_two"
                android:checkable="true"
                android:title="@string/about"
                app:showAsAction="ifRoom" />
        </menu>
    </item>

</menu>