<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.material.androidpro.material.bottomsheet.demo.BottomSheetDemoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/onPrimary"
        android:padding="@dimen/dp_16"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileImage"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:setImageDrawable='@{vm.mImage}'
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

        <com.material.sharedcode.widgets.CustomTextView
            android:id="@+id/name"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:text="@{vm.mName}"
            android:textColor="@color/onBackground"
            android:textSize="@dimen/sp_18"
            app:layout_constraintBottom_toBottomOf="@+id/profileImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/profileImage"
            app:layout_constraintTop_toTopOf="@+id/profileImage"
            app:text_font="Quicksand_Medium" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/topBarrier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="profileImage, name" />

        <TextView
            android:id="@+id/description"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/dummy_des"
            android:textColor="@color/grey_500"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topBarrier" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/detailButton"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/details"
            android:textAllCaps="true"
            android:textColor="@color/secondary"
            app:cornerRadius="@dimen/dp_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description"
            app:strokeColor="@color/secondary"
            app:strokeWidth="@dimen/dp_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/closeButton"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:text="@string/close"
            android:textAllCaps="true"
            android:textColor="@color/red_400"
            app:cornerRadius="@dimen/dp_4"
            app:layout_constraintEnd_toStartOf="@+id/detailButton"
            app:layout_constraintTop_toBottomOf="@+id/description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>