<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.material.androidpro.material.bottomsheet.demo.BottomSheetDemoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_16"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileImage"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:setImageDrawable='@{vm.mImage}'
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

        <com.material.sharedcode.widgets.CustomTextView
            android:id="@+id/name"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:text="@{vm.mName}"
            android:textColor="@color/onBackground"
            android:textSize="@dimen/sp_18"
            app:layout_constraintBottom_toBottomOf="@+id/profileImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/profileImage"
            app:layout_constraintTop_toTopOf="@+id/profileImage"
            app:text_font="Quicksand_Bold" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/topBarrier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="profileImage, name" />

        <View
            android:id="@+id/divider"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_1"
            app:layout_constraintTop_toBottomOf="@+id/topBarrier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@color/outline"/>

        <LinearLayout
            android:id="@+id/shareLayout"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share" />

            <com.material.sharedcode.widgets.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:text="@string/share"
                android:textColor="@color/onBackground"
                android:textSize="@dimen/sp_16"
                app:text_font="Quicksand_Medium" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/editLayout"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shareLayout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit" />

            <com.material.sharedcode.widgets.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:text="@string/edit"
                android:textColor="@color/onBackground"
                android:textSize="@dimen/sp_16"
                app:text_font="Quicksand_Medium" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/deleteLayout"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editLayout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete" />

            <com.material.sharedcode.widgets.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:text="@string/delete"
                android:textColor="@color/onBackground"
                android:textSize="@dimen/sp_16"
                app:text_font="Quicksand_Medium" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deleteLayout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete_forever" />

            <com.material.sharedcode.widgets.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:text="@string/delete_forever"
                android:textColor="@color/onBackground"
                android:textSize="@dimen/sp_16"
                app:text_font="Quicksand_Medium" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>